--- a/Subjot/Notifications.xib
+++ b/Subjot/Notifications.xib
@@ -43,18 +43,18 @@
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIView" id="618804608">
+					<object class="IBUIView" id="378497133">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIImageView" id="825326206">
-								<reference key="NSNextResponder" ref="618804608"/>
+							<object class="IBUIImageView" id="859838019">
+								<reference key="NSNextResponder" ref="378497133"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{47, 28}, {227, 236}}</string>
-								<reference key="NSSuperview" ref="618804608"/>
+								<reference key="NSSuperview" ref="378497133"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="9486890"/>
+								<reference key="NSNextKeyView" ref="466318573"/>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -63,13 +63,13 @@
 									<string key="NSResourceName">no-notifications.png</string>
 								</object>
 							</object>
-							<object class="IBUILabel" id="9486890">
-								<reference key="NSNextResponder" ref="618804608"/>
+							<object class="IBUILabel" id="466318573">
+								<reference key="NSNextResponder" ref="378497133"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{47, 206}, {227, 21}}</string>
-								<reference key="NSSuperview" ref="618804608"/>
+								<reference key="NSSuperview" ref="378497133"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="629963105"/>
+								<reference key="NSNextKeyView" ref="876831051"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -86,7 +86,7 @@
 									<bytes key="NSRGB">MC4yMjc0NTA5OTY2IDAuMjQ3MDU4ODM4NiAwLjI2Mjc0NTExMjIAA</bytes>
 								</object>
 								<nil key="IBUIHighlightedColor"/>
-								<object class="NSColor" key="IBUIShadowColor" id="836230114">
+								<object class="NSColor" key="IBUIShadowColor" id="455999617">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
 								</object>
@@ -95,11 +95,11 @@
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
 							</object>
-							<object class="IBUILabel" id="629963105">
-								<reference key="NSNextResponder" ref="618804608"/>
+							<object class="IBUILabel" id="876831051">
+								<reference key="NSNextResponder" ref="378497133"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{47, 235}, {227, 66}}</string>
-								<reference key="NSSuperview" ref="618804608"/>
+								<reference key="NSSuperview" ref="378497133"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -107,7 +107,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">This tab displays notifications when people interact with you or start writing in new subjects.</string>
+								<string key="IBUIText">This tab displays notifications when people interact with you, start writing in new subjects, and more.</string>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">11</double>
@@ -118,7 +118,7 @@
 									<bytes key="NSRGB">MC4yMjc0NTA5OTY2IDAuMjQ3MDU4ODM4NiAwLjI2Mjc0NTExMjIAA</bytes>
 								</object>
 								<nil key="IBUIHighlightedColor"/>
-								<reference key="IBUIShadowColor" ref="836230114"/>
+								<reference key="IBUIShadowColor" ref="455999617"/>
 								<string key="IBUIShadowOffset">{0, 0}</string>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -130,11 +130,11 @@
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="825326206"/>
+						<reference key="NSNextKeyView" ref="859838019"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace" id="625193885">
+							<object class="NSColorSpace" key="NSCustomColorSpace" id="141018059">
 								<int key="NSID">2</int>
 							</object>
 						</object>
@@ -144,11 +144,11 @@
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="618804608"/>
+				<reference key="NSNextKeyView" ref="378497133"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="625193885"/>
+					<reference key="NSCustomColorSpace" ref="141018059"/>
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -180,7 +180,7 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="618804608"/>
+							<reference ref="378497133"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -197,29 +197,29 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="618804608"/>
+						<reference key="object" ref="378497133"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="825326206"/>
-							<reference ref="9486890"/>
-							<reference ref="629963105"/>
+							<reference ref="859838019"/>
+							<reference ref="466318573"/>
+							<reference ref="876831051"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="825326206"/>
-						<reference key="parent" ref="618804608"/>
+						<reference key="object" ref="859838019"/>
+						<reference key="parent" ref="378497133"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="9486890"/>
-						<reference key="parent" ref="618804608"/>
+						<reference key="object" ref="466318573"/>
+						<reference key="parent" ref="378497133"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
-						<reference key="object" ref="629963105"/>
-						<reference key="parent" ref="618804608"/>
+						<reference key="object" ref="876831051"/>
+						<reference key="parent" ref="378497133"/>
 					</object>
 				</object>
 			</object>
